--- a/frontendJS/package.json
+++ b/frontendJS/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy-gcp": "gsutil cp -r dist/* gs://cartwish-bucket"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.1",
