--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GCP Cloud Run
 on:
   push:
     branches:
-      - main
+      - testing-main
 
 permissions:
   id-token: write
@@ -21,9 +21,6 @@ jobs:
   deploy:
     name: Build & Deploy
     runs-on: ubuntu-latest
-    outputs:
-      backend_changed: ${{ steps.check_backend.outputs.changed }}
-      frontend_changed: ${{ steps.check_frontend.outputs.changed }}
 
     steps:
       - name: Checkout repository
@@ -36,25 +33,21 @@ jobs:
           workload_identity_provider: ${{secrets.WORKLOAD_IDENTITY_PROVIDER}}
           service_account: ${{secrets.SERVICE_ACCOUNT_EMAIL}}
 
-      - name: Check if backend changed
+      - name: Check for backend changes
         id: check_backend
-        run: |
-          git fetch origin main --depth=2
-          if git diff --quiet HEAD^ HEAD -- backend; then
-            echo "changed=false" >> $GITHUB_OUTPUT
-          else
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
+        uses: dorny/paths-filter@v2
+        with:
+          filters: |
+            backend:
+              - 'backend/**'
 
-      - name: Check if frontend changed
+      - name: Check for frontend changes
         id: check_frontend
-        run: |
-          git fetch origin main --depth=2
-          if git diff --quiet HEAD^ HEAD -- frontendJS; then
-            echo "changed=false" >> $GITHUB_OUTPUT
-          else
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
+        uses: dorny/paths-filter@v2
+        with:
+          filters: |
+            frontend:
+              - 'frontendJS/**'
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -68,40 +61,63 @@ jobs:
         run: |
           gcloud auth configure-docker europe-west1-docker.pkg.dev
 
-      - name: Build & Push backend image
-        if: steps.check_backend.outputs.changed == 'true'
+      - name: Set Backend Image Tag
+        id: set_backend_tag
         run: |
-          docker build -t europe-west1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/cartwish-repo/backend:${{ env.IMAGE_TAG }} ./backend
-          docker push europe-west1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/cartwish-repo/backend:${{ env.IMAGE_TAG }}
+          if [[ "${{ steps.check_backend.outputs.backend }}" == "true" ]]; then
+            echo "Kreira se novi tag za backend."
+            echo "tag=${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
+          else
+            echo "Nema promena za backend. Preuzima se trenutni tag."
+            CURRENT_IMAGE=$(gcloud run services describe ${{ env.BACKEND_NAME }} --region ${{ env.REGION }} --format 'value(template.spec.containers[0].image)' || echo "")
+            if [[ -z "$CURRENT_IMAGE" ]]; then
+              echo "tag=${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
+            else
+              CURRENT_TAG=$(echo $CURRENT_IMAGE | cut -d':' -f2)
+              echo "tag=$CURRENT_TAG" >> $GITHUB_OUTPUT
+            fi
+          fi
+
+      - name: Build & Push backend image
+        # Build-uj ako ima promena ILI ako servis još ne postoji
+        if: steps.check_backend.outputs.backend == 'true' || steps.set_backend_tag.outputs.tag == env.IMAGE_TAG
+        run: |
+          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/backend:${{ steps.set_backend_tag.outputs.tag }} ./backend
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/backend:${{ steps.set_backend_tag.outputs.tag }}
+
+      - name: Set Frontend Image Tag
+        id: set_frontend_tag
+        run: |
+          if [[ "${{ steps.check_frontend.outputs.frontend }}" == "true" ]]; then
+            echo "Kreira se novi tag za frontend."
+            echo "tag=${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
+          else
+            echo "Nema promena za frontend. Preuzima se trenutni tag."
+            CURRENT_IMAGE=$(gcloud run services describe ${{ env.FRONTEND_NAME }} --region ${{ env.REGION }} --format 'value(template.spec.containers[0].image)' || echo "")
+            if [[ -z "$CURRENT_IMAGE" ]]; then
+              echo "tag=${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
+            else
+              CURRENT_TAG=$(echo $CURRENT_IMAGE | cut -d':' -f2)
+              echo "tag=$CURRENT_TAG" >> $GITHUB_OUTPUT
+            fi
+          fi
+
+      - name: Build & Push frontend image
+        if: steps.check_frontend.outputs.frontend == 'true' || steps.set_frontend_tag.outputs.tag == env.IMAGE_TAG
+        run: |
+          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/frontend:${{ steps.set_frontend_tag.outputs.tag }} ./frontendJS
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/frontend:${{ steps.set_frontend_tag.outputs.tag }}
 
       - name: Terraform Init
         working-directory: ./infra
         run: terraform init
 
-      - name: Deploy backend to Cloud Run 
-        if: steps.check_backend.outputs.changed == 'true'
+      - name: Terraform Apply
         working-directory: ./infra
-        run: terraform apply -auto-approve -target=module.backend -var="backend_image_tag=${{ env.IMAGE_TAG }}"
-
-      - name: Get current backend URL from Cloud Run
-        id: backend_url
         run: |
-          url=$(gcloud run services describe ${{ env.BACKEND_NAME }} \
-            --region ${{ env.REGION }} \
-            --format='value(status.url)')
-          echo "BACKEND_URL=$url" >> $GITHUB_OUTPUT
-
-      - name: Build & Push frontend image with backend URL
-        if: steps.check_frontend.outputs.changed == 'true'
-        run: |
-          docker build --build-arg VITE_API_URL=${{ steps.backend_url.outputs.BACKEND_URL }}/api -t europe-west1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/cartwish-repo/frontend:${{ github.sha }} ./frontendJS
-          docker push europe-west1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/cartwish-repo/frontend:${{ github.sha }}
-
-      - name: Deploy frontend to Cloud Run
-        if: steps.check_frontend.outputs.changed == 'true' 
-        working-directory: ./infra
-        run: terraform apply -auto-approve -target=module.frontend -var="frontend_image_tag=${{ env.IMAGE_TAG }}"
-
+          terraform apply -auto-approve \
+            -var="backend_image_tag=${{ env.IMAGE_TAG }}" \
+            -var="frontend_image_tag=${{ env.IMAGE_TAG }}"
 
       - name: Output Cloud Run URLs
         working-directory: ./infra
