--- a/frontendJS/Dockerfile
+++ b/frontendJS/Dockerfile
@@ -1,8 +1,6 @@
 FROM node:20 as build
 WORKDIR /app
 
-ARG VITE_API_URL
-ENV VITE_API_URL=$VITE_API_URL
 
 COPY package*.json ./
 RUN npm install
@@ -12,5 +10,10 @@ RUN npm run build
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["/entrypoint.sh"]
+
+# CMD ["nginx", "-g", "daemon off;"]
