--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,8 +91,8 @@ jobs:
       - name: Build & Push backend image
         if: steps.check_backend.outputs.backend == 'true' || steps.set_backend_tag.outputs.tag == env.IMAGE_TAG
         run: |
-          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ steps.get_project_id.outputs.project_id }}/${{ env.REPO_NAME }}/backend:${{ steps.set_backend_tag.outputs.tag }} ./backend
-          docker push ${{ env.REGION }}-docker.pkg.dev/${{ steps.get_project_id.outputs.project_id }}/${{ env.REPO_NAME }}/backend:${{ steps.set_backend_tag.outputs.tag }}
+          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/backend:${{ steps.set_backend_tag.outputs.tag }} ./backend
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/backend:${{ steps.set_backend_tag.outputs.tag }}
 
       - name: Set Frontend Image Tag
         id: set_frontend_tag
@@ -114,8 +114,8 @@ jobs:
       - name: Build & Push frontend image
         if: steps.check_frontend.outputs.frontend == 'true' || steps.set_frontend_tag.outputs.tag == env.IMAGE_TAG
         run: |
-          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ steps.get_project_id.outputs.project_id }}/${{ env.REPO_NAME }}/frontend:${{ steps.set_frontend_tag.outputs.tag }} ./frontendJS
-          docker push ${{ env.REGION }}-docker.pkg.dev/${{ steps.get_project_id.outputs.project_id }}/${{ env.REPO_NAME }}/frontend:${{ steps.set_frontend_tag.outputs.tag }}
+          docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/frontend:${{ steps.set_frontend_tag.outputs.tag }} ./frontendJS
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{env.PROJECT_ID }}/${{ env.REPO_NAME }}/frontend:${{ steps.set_frontend_tag.outputs.tag }}
     
 
       - name: Terraform Init
