--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,9 @@ jobs:
         run: |
           terraform apply -auto-approve \
             -var="backend_image_tag=${{ env.IMAGE_TAG }}" \
-            -var="frontend_image_tag=${{ env.IMAGE_TAG }}"
+            -var="frontend_image_tag=${{ env.IMAGE_TAG }}" \
+            -var="database_url_secret=${{ secrets.DB_URL }}" \
+            -var="jwt_secret_value=${{ secrets.JWT_SECRET }}"
         working-directory: ./infra
 
       - name: Output Cloud Run URLs
